<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:padding="20dp"
        android:background="#FECE2F">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_centerVertical="true"
            android:includeFontPadding="false"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username@gmail.com"
            android:textSize="13dp"
            android:id="@+id/username"
            android:layout_toRightOf="@+id/profile_image"
            android:layout_marginLeft="10dp"
            android:includeFontPadding="false"
            android:layout_below="@+id/fullname"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

       <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rekening"
            android:layout_marginBottom="5dp"
           android:textSize="18dp"
           android:textStyle="bold"/>

          <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="00234323223xxxx"
              android:layout_marginBottom="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buku"
            android:layout_marginBottom="10dp"
            android:textSize="18dp"
            android:textStyle="bold"/>

           <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/alamat"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="150dp">

        <Button
            android:id="@+id/btn_bantuan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bantuan" />

        <Button
            android:id="@+id/btn_bahasa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bahasa" />

        <Button
            android:id="@+id/btn_keluar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/keluar" />

    </LinearLayout>



</LinearLayout>