<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/beritaterkini"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"/>



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/berita1"
                android:layout_width="80dp"
                android:layout_height="800dp"
                android:src="@drawable/ethgraphh"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/berita1"
                android:layout_marginTop="15dp"
                android:text="@string/beritaETH"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_toRightOf="@+id/berita1"
                android:text="@string/beritaETHH"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:layout_toRightOf="@+id/berita1"
                android:paddingLeft="20dp"
                android:text="@string/sumber1"
                android:textSize="10dp"
                android:paddingTop="10dp"/>



        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/berita2"
                android:layout_width="80dp"
                android:layout_height="800dp"
                android:src="@drawable/ripplelabss"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/berita2"
                android:layout_marginTop="15dp"
                android:text="@string/beritaxrp"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt3"
                android:layout_toRightOf="@+id/berita2"
                android:text="@string/beritaxrpp"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt4"
                android:layout_toRightOf="@+id/berita2"
                android:paddingLeft="20dp"
                android:text="@string/sumber2"
                android:textSize="10dp"
                android:paddingTop="10dp"/>



        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/berita3"
                android:layout_width="80dp"
                android:layout_height="800dp"
                android:src="@drawable/download"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/berita3"
                android:layout_marginTop="15dp"
                android:text="@string/beritacoinvestasi"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/txt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt5"
                android:layout_toRightOf="@+id/berita3"
                android:text="@string/beritacoinvestasii"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt6"
                android:layout_toRightOf="@+id/berita3"
                android:paddingLeft="20dp"
                android:text="@string/sumber3"
                android:textSize="10dp"
                android:paddingTop="10dp"/>



        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/berita4"
                android:layout_width="80dp"
                android:layout_height="800dp"
                android:src="@drawable/download"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/berita4"
                android:layout_marginTop="15dp"
                android:text="@string/coinvestasi"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/txt8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt7"
                android:layout_toRightOf="@+id/berita4"
                android:text="@string/coinvestasii"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt8"
                android:layout_toRightOf="@+id/berita4"
                android:paddingLeft="20dp"
                android:text="@string/sumber3"
                android:textSize="10dp"
                android:paddingTop="10dp"/>



        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/berita5"
                android:layout_width="80dp"
                android:layout_height="800dp"
                android:src="@drawable/bttchart"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/txt9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/berita5"
                android:layout_marginTop="15dp"
                android:text="@string/btt"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:id="@+id/txt10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt9"
                android:layout_toRightOf="@+id/berita5"
                android:text="@string/bttt"
                android:textStyle="bold"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt10"
                android:layout_toRightOf="@+id/berita5"
                android:paddingLeft="20dp"
                android:text="@string/sumber4"
                android:textSize="10dp"
                android:paddingTop="10dp"/>



        </RelativeLayout>




    </LinearLayout>







</LinearLayout>