<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:textSize="6pt"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="kembali11"/>


    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="520dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/btc"
        android:textSize="12pt" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="470dp"
        android:fontFamily="sans-serif-black"
        android:text="Rp.817.772.000"
        android:textSize="10pt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="398dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/saldo"
        android:textSize="9pt"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="71dp" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="398dp"
        android:fontFamily="sans-serif-black"
        android:text="Rp.10.000.000"
        android:inputType="number"
        android:textSize="9pt" />

    <EditText
        android:id="@+id/editTextbelibtc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300dp"
        android:autofillHints="@string/rp"
        android:hint="@string/rp"
        android:inputType="number"
        android:textSize="12pt" />


    <Button
        android:id="@+id/btnBeli"
        android:layout_width="160dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="180dp"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="belibtc1"
        android:text="@string/beli"
        android:textSize="10pt"
        app:backgroundTint="#4FB653"/>


</RelativeLayout>