<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="20dp"
        android:background="#FECE2F">

        <TextView
            android:id="@+id/aset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aset"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aset"
            android:paddingTop="10dp"
            android:textSize="25dp"
            android:text="Rp 0"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portofolio"
            android:textStyle="bold"
            android:textSize="18dp"
            android:fontFamily="sans-serif-black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/noaset"
            android:paddingTop="240dp"
            android:textSize="15dp"
            android:paddingLeft="60dp"/>




    </LinearLayout>






</LinearLayout>