<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        android:textSize="6pt"
        android:onClick="kembali1"
        android:fontFamily="sans-serif-condensed-light" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:src="@drawable/link_grafik" />
    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="115dp"
        android:text="  Rp591.600"
        android:fontFamily="sans-serif-black"
        android:textSize="9pt" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-3dp"
        android:layout_marginBottom="115dp"
        android:text="  Rp581.600"
        android:fontFamily="sans-serif-black"
        android:textSize="9pt" />

    <Button
        android:id="@+id/btnJual"
        android:layout_width="160dp"
        android:layout_height="72dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="juallink"
        android:text="@string/jual"
        android:textSize="10pt"
        app:backgroundTint="#D52B53" />

    <Button
        android:id="@+id/btnBeli"
        android:layout_width="160dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="belilink"
        android:text="@string/beli"
        android:textSize="10pt"
        app:backgroundTint="#4FB653" />

</RelativeLayout>



